# Gsoc

./: .gitignore  launch.sh  setup_workspace.sh
src/: README.md
src/my_rfid_demo/: CMakeLists.txt
src/my_rfid_demo/include/my_rfid_demo/: dummy_sensor.hpp
src/my_rfid_demo/launch/: warehouse_demo.launch.py
src/my_rfid_demo/src/: dummy_node.cpp
src/my_rfid_demo/src/plugins/: dummy_sensor.cpp
src/my_rfid_demo/urdf/: warehouse_robot.urdf.xacro
src/my_rfid_demo/worlds/: warehouse.sdf
